# envlib

./: .gitignore  CHANGELOG.md  CLAUDE.md  Environmental_Data_Vocabulary_Research.md  OPEN_WORK.md  README.md  mkdocs.yml  pyproject.toml
.antigravitycli/: bc952dd5-547b-408e-a5e4-385c2445da4c.json
.github/workflows/: build.yml  test.yml
conda/: meta.yaml
docs/: changelog.md
docs/concepts/: data-model.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: browsing-querying.md  opening-data.md  producing-datasets.md  publishing.md  tethys-migration.md  vocabularies.md
docs/reference/: catalogue.md  envlib.md  metadata.md  vocabularies.md
envlib/: __init__.py  catalogue.py  metadata.py
envlib/tests/: conftest.py  test_catalogue.py  test_catalogue_live.py  test_metadata.py  test_vocabularies.py
envlib/vocabularies/: __init__.py  aggregation_statistic.json  feature.json  frequency_interval.json  license.json  method.json  processing_level.json  standard_name.json  variable.json
plans/: architecture_plan.md  variable_inventory.md
