[project]
name = "envlib"
authors = [
  { name = "mullenkamp", email = "mullenkamp1@gmail.com" }
]
description = "The environmental library"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.10"
dependencies = [
  "cfdb>=0.9.1",
  "ebooklet>=0.9.6",
  "booklet>=0.12.6",
  "pyproj",
  "shapely>=2.0",
  "urllib3",
]

[dependency-groups]
dev = [
  "spyder-kernels==2.5.2",
  "black",
  "mypy",
  "ruff",
  "pytest",
  "pytest-cov",
  "mkdocs-material",
  "mkdocstrings[python]",
  "types-shapely>=2.1.0.20260630",
  "numpy>=2.2.6",
  "tomli>=2.4.1 ; python_full_version < '3.11'",
]

[tool.pytest.ini_options]
testpaths = ["envlib/tests"]


[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
target-version = ["py310"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.lint.flake8-quotes]
# match black's skip-string-normalization: the codebase uses single quotes
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.lint.isort]
known-first-party = ["envlib"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"envlib/tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["envlib", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
envlib = ["envlib"]
tests = ["envlib/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[build-system]
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"

[project.urls]
Documentation = "https://envlib.github.io/envlib/"
Source = "https://github.com/envlib/envlib"

[tool.hatch.build.targets.sdist]
include = [
    "/envlib",
]
exclude = [
    "/envlib/tests/*",
]

[tool.hatch.build.targets.wheel]
exclude = [
    "/envlib/tests",
]

[tool.hatch.version]
path = "envlib/__init__.py"

[tool.mypy]
ignore_missing_imports = true
